tests/fixtures/fail/use-nested/components/Button.tsx
// This should be button.tsx (kebab-case)
